Add feature schedule